<resources>
    <string name="app_name">CrapMap</string>
    <string name="permission_title_location">Why do you need my location?</string>
    <string name="permission_explanation_location">CrapMap uses your current location to suggest nearby bathrooms. We do not store this data.</string>
    <string name="permission_confirmation">OK</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings relating to the Map -->
    <string name="loading_map_message">Finding bathrooms near you…</string>
    <string name="view_reviews">Tap to see more information</string>
    <string name="bathroom_open">Open Now</string>
    <string name="bathroom_closed">Closed Now</string>

    <!-- Strings relating to bathroom previews -->
    <string name="label_loading_travel_time">Getting travel time...</string>
    <string name="label_cleanliness">Cleanliness:</string>
    <string name="label_accessibility">Accessibility:</string>
    <string name="label_availability">Availability:</string>
    <string name="label_reviews">All Reviews</string>
    <string name="label_unknown_user">Anonymous</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to creating bathrooms -->
    <string name="new_bathroom_title">Create New Bathroom</string>
    <string name="prompt_bathroom_name">Bathroom Name</string>
    <string name="label_requires_purchase">Requires Purchase</string>
    <string name="label_hours">Hours of Operation</string>
    <string name="label_submit">Submit</string>

    <!-- Strings for days of the week -->
    <string name="label_sunday">Sunday</string>
    <string name="label_monday">Monday</string>
    <string name="label_tuesday">Tuesday</string>
    <string name="label_wednesday">Wednesday</string>
    <string name="label_thursday">Thursday</string>
    <string name="label_friday">Friday</string>
    <string name="label_saturday">Saturday</string>

    <!-- Strings for new comment -->
    <string name="new_comment_title">Create New Comment</string>
    <string name="label_comment">Your Comment:</string>
    <string name="label_comment_placeholder">Comment here</string>

</resources>
