<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bathroom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.team2.crapmap.NewBathroomActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_bathroom_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/new_bathroom_name"
            android:hint="@string/prompt_bathroom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/new_bathroom_requires_purchase"
        android:text="@string/label_requires_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_bathroom_name_layout"/>
    <TextView
        android:id="@+id/hours"
        android:text="@string/label_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_bathroom_requires_purchase"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"/>
    <CheckBox
        android:id="@+id/monday"
        android:text="@string/label_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hours"/>
    <Spinner
        android:id="@+id/mondayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hours"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/mondayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hours"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/tuesday"
        android:text="@string/label_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monday"/>
    <Spinner
        android:id="@+id/tuesdayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/tuesdayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monday"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/wednesday"
        android:text="@string/label_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tuesday"/>
    <Spinner
        android:id="@+id/wednesdayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tuesday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/wednesdayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tuesday"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/thursday"
        android:text="@string/label_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wednesday"/>
    <Spinner
        android:id="@+id/thursdayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wednesday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/thursdayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wednesday"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/friday"
        android:text="@string/label_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thursday"/>
    <Spinner
        android:id="@+id/fridayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thursday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/fridayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thursday"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/saturday"
        android:text="@string/label_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friday"/>
    <Spinner
        android:id="@+id/saturdayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/saturdayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friday"
        android:layout_marginLeft="250dp"></Spinner>
    <CheckBox
        android:id="@+id/sunday"
        android:text="@string/label_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturday"/>
    <Spinner
        android:id="@+id/sundayStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturday"
        android:layout_marginLeft="150dp"></Spinner>
    <Spinner
        android:id="@+id/sundayEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturday"
        android:layout_marginLeft="250dp"></Spinner>
    <Button
        android:id="@+id/new_bathroom_submit"
        android:text="@string/label_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
